<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_add_dishes_in_collection"
        android:orderInCategory="1"
        android:title="@string/add_in_collection" />
    <item
        android:id="@+id/action_copy_another_collection"
        android:orderInCategory="2"
        android:title="@string/copy_dishes_another_collection" />
    <item
        android:id="@+id/action_edit"
        android:orderInCategory="3"
        android:title="@string/edit" />
    <item
        android:id="@+id/action_share"
        android:orderInCategory="4"
        android:title="@string/share" />
    <item
        android:id="@+id/action_clear_collection"
        android:orderInCategory="5"
        android:title="@string/clear" />
    <item
        android:id="@+id/action_delete_only_collection"
        android:orderInCategory="6"
        android:title="@string/delete_only_collection" />
    <item
        android:id="@+id/action_delete_collection_with_dishes"
        android:orderInCategory="7"
        android:title="@string/delete_collection_with_dishes" />

</menu>
