<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/colorBackground">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/back_add_dish_imageView"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:layout_marginTop="10dp"
            android:src="?attr/iconBack"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView12"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="15dp"
            android:text="@string/add_dish_text"
            android:textColor="?attr/colorText"
            android:textSize="35sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/hint_text_name_dish"
            android:textColor="?attr/colorText"
            android:textColorHint="?attr/colorHintText"
            android:textSize="20sp"
            app:backgroundTint="?attr/colorControlNormal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_add_dish_imageView" />

        <EditText
            android:id="@+id/recipeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_text_recipe_dish"
            android:textColor="?attr/colorText"
            android:textColorHint="?attr/colorHintText"
            app:backgroundTint="?attr/colorControlNormal"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nameEditText" />

        <Button
            android:id="@+id/addIngredientButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/rounded_background_button"
            android:onClick="onAddIngredientButtonClick"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/button_add_ingredient"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/recipeEditText" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/addIngredientRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:background="@drawable/rounded_background_recycler_view"
            android:scrollIndicators="none"
            android:scrollbars="none"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addIngredientButton" />

        <Button
            android:id="@+id/addButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_background_button"
            android:onClick="onAddButtonClick"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/button_add_dish"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addIngredientRecyclerView" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
